added TUI application
